# Re-Gen-Project

./: .gitignore  README.md  build_gui.sh  genome_scale_builder.py  pyproject.toml  re-gen.spec  re_gen_menu.sh  re_gen_unified_architecture.py
.github/workflows/: build-windows.yml  ci.yml
Re-Gen-Project/: README.md
Re-Gen-Project/re-gen/: ANALISE_INTEGRACAO_HARDWARE_SOFTWARE.md  ARQUIVOS_NOVOS_REFATORACAO.md  COMECE_AQUI.md  CONCLUSAO_REFATORACAO.txt  HIBRIDIZADOR_RESUMO.txt  INDEX.md  LAUNCHER_README.md  README_LAUNCHER.txt  REFATORACAO_HARDWARE.md  RESUMO_REFATORACAO_COMPLETA.txt  START.sh  STATUS_PROJETO.txt  launcher.sh  ollama_config_example.md  run_gui.sh
Re-Gen-Project/re-gen/CODIGO/: HIBRIDIZADOR_ARQUIVOS.md  README_HIBRIDIZADOR.md  ai_report.py  ai_tools.py  arduino_bridge.py  complete_revival_orchestrator.py  crispr_engine.py  demo_full_transformation.py  descendant_mapper.py  device_base.py  dino_veterinary_syringe_device.py  dinosaur_database.py  dinosaur_selector.py  dinosaur_transformation_pipeline.py  dna_integrity_checker.py  dna_storage_media_writer.py  dna_synthesis_robot.py  dna_synthesizer_device.py  dna_synthesizer_hardware.py  dna_to_dinosaur_pipeline.py  embryo_injection_robot.py  (+34 more)
re_gen_output/crispr/: grnas.json  pacote_edicao_crispr.csv
re_gen_output/dna_storage/: Brachiosaurus_altithorax.iso  Stegosaurus_stenops.iso  Triceratops_horridus.iso  Tyrannosaurus_rex.iso  Velociraptor_mongoliensis.iso
re_gen_output/genoma_escala_completa/: genome_manifest.json
re_gen_output/hibridizacao/: dados_hibridizacao.json
re_gen_output/integridade/: relatorio_integridade.txt
re_gen_output/ncbi_references/: deep_reference_results.json  referencias_validadas.json
re_gen_output/relatorios/: RELATORIO_FINAL.txt  pipeline_completo.json
src/re_gen/: __init__.py  cli.py  exceptions.py
tests/: test_cli.py  test_crispr_engine.py  test_descendant_mapper.py  test_dinosaur_database.py  test_dinosaur_selector.py  test_enzyme_library.py  test_exceptions.py  test_gene_edit_package.py  test_genome_synthesis.py  test_genome_validator.py  test_hardware.py  test_paleontology.py  test_reconstruct.py
(+105 files in other folders)
